Prevent layout shift for sidebar images

--- a/src/doc-styles.scss
+++ b/src/doc-styles.scss
@@ -348,6 +348,7 @@ body {
 
     & a img {
       height: 1em;
+      width: 1em;
       vertical-align: middle;
       display: inline-block;
       margin-right: 0.25em;
